--- a/index3.html
+++ b/index3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>TP2</title>
@@ -21,8 +21,12 @@
       </div>
     </header>
     <main>
-      <div id="lista-de-productos" class="lista-de-productos"></div>
+      <div class="container-main">
+        <img src="imagenes/SunnyLand.jpg" alt="Producto1">
+      </div>
+      <div class="container-main">
+        <img src="imagenes/SunnyLand.jpg" alt="Producto2">
+      </div>
     </main>
-    <script src="js/script.js"></script>
   </body>
 </html>
