--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>TP2</title>
   </head>
   <body>
@@ -23,6 +30,12 @@
     <main>
       <div id="lista-de-productos" class="lista-de-productos"></div>
     </main>
+    <footer>
+      <div class="redes">
+        <a href=><i class="fa-brands fa-facebook-f"></i></a>
+        <a href=><i class="fa-solid fa-camera"></i>
+      </div>
+    </footer>
     <script src="js/script.js"></script>
   </body>
 </html>
